[package]
name = "lupan-wm"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
penrose = "0.3.1"
penrose_ui = "0.1.1"
simplelog = "0.8"
tracing = { version = "0.1.37", features = ["attributes", "log"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
